--- a/src/IconPacks.Browser/Styles/SidebarExpander.xaml
+++ b/src/IconPacks.Browser/Styles/SidebarExpander.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Converters="http://metro.mahapps.com/winfx/xaml/shared"
+                    xmlns:converters="http://metro.mahapps.com/winfx/xaml/shared"
                     xmlns:ctrls="clr-namespace:IconPacks.Browser.Controls"
                     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
@@ -54,7 +54,7 @@
     <Style BasedOn="{StaticResource MahApps.Styles.Expander}" TargetType="{x:Type ctrls:SidebarExpander}">
         <Setter Property="Background" Value="{DynamicResource MahApps.Brushes.Gray8}" />
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="MaxWidth" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Panel}, Path=ActualWidth, Converter={Converters:MathSubtractConverter}, ConverterParameter=150}" />
+        <Setter Property="MaxWidth" Value="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Panel}, Path=ActualWidth, Converter={converters:MathSubtractConverter}, ConverterParameter=150}" />
         <Setter Property="MinWidth" Value="24" />
         <Setter Property="Template">
             <Setter.Value>
@@ -220,7 +220,7 @@
         </Setter>
         <Setter Property="Width">
             <Setter.Value>
-                <MultiBinding Converter="{Converters:MathMultiplyConverter}">
+                <MultiBinding Converter="{converters:MathMultiplyConverter}">
                     <Binding Path="SidebarExpandedWidth" Source="{x:Static prop:Settings.Default}" />
                     <Binding Path="AnimateWidthFactor" RelativeSource="{RelativeSource Mode=Self}" />
                 </MultiBinding>
